working on 3d section

--- a/startup.html
+++ b/startup.html
@@ -219,12 +219,100 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4"></div>
+            <div class="col-md-4">
+              <div class="w-item">
+                <img src="./images/startup/tab.png" class="img-fluid" alt="" />
+                <div class="item-overlay">
+                  <div>
+                    <h6>App Design</h6>
+                    <h3>Mockup App</h3>
+                    <a href="#">View</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mt-3">
+            <div class="col-md-4">
+              <div class="w-item">
+                <img
+                  src="./images/startup/pendrive.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="item-overlay">
+                  <div>
+                    <h6>App Design</h6>
+                    <h3>Mockup App</h3>
+                    <a href="#">View</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="w-item">
+                <img
+                  src="./images/startup/chair.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="item-overlay">
+                  <div>
+                    <h6>App Design</h6>
+                    <h3>Mockup App</h3>
+                    <a href="#">View</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="w-item">
+                <img
+                  src="./images/startup/tabletenis.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="item-overlay">
+                  <div>
+                    <h6>App Design</h6>
+                    <h3>Mockup App</h3>
+                    <a href="#">View</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- featured section end -->
+
+    <!-- how we work section start -->
+
+    <section class="h-w-work">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="a-content">
+              <h6>About Us</h6>
+              <h4></h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
+                necessitatibus, voluptatem explicabo nisi assumenda ipsum
+                quisquam ex laboriosam dolores dolor deleniti molestiae possimus
+                porro, dolore ad nulla veniam obcaecati omnis.
+              </p>
+              <a href="#"><i class="fa fa-play video-square"></i>Watch Video</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="./images/startup/3D.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- how we work section end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
