--- a/startup.html
+++ b/startup.html
@@ -4,7 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -292,22 +295,24 @@
 
     <section class="h-w-work">
       <div class="container">
-        <div class="row">
+        <div class="row g-0">
           <div class="col-md-6">
             <div class="a-content">
-              <h6>About Us</h6>
-              <h4></h4>
+              <h6>How we work</h6>
+              <h4>“Function information without cross action media value.</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus
-                necessitatibus, voluptatem explicabo nisi assumenda ipsum
-                quisquam ex laboriosam dolores dolor deleniti molestiae possimus
-                porro, dolore ad nulla veniam obcaecati omnis.
+                Efficiently unleash cross-media tour function information
+                without cross action media value. Quickly maximize timely
+                deliverables for real-time schemas.
               </p>
-              <a href="#"><i class="fa fa-play video-square"></i>Watch Video</a>
+              <a href="#"
+                ><i class="fa fa-play video-square"></i
+                ><span class="work-padding"> Watch Video </span></a
+              >
             </div>
           </div>
-          <div class="col-md-6">
-            <img src="./images/startup/3D.jpg" alt="" />
+          <div class="col-md-6 work">
+            <img class="img-fluid" src="./images/startup/3D.jpg" alt="" />
           </div>
         </div>
       </div>
