--- a/startup.html
+++ b/startup.html
@@ -318,6 +318,198 @@
       </div>
     </section>
     <!-- how we work section end -->
+
+    <!-- team section start -->
+    <section class="team">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-6 offset-3">
+            <h2 class="section-title">Our Creative Team</h2>
+            <p class="section-desc">
+              Tour function information without cross action media value quickly
+              maximize timely deliverables.
+            </p>
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-3">
+            <div class="team-profile text-center">
+              <div class="profile-img">
+                <img
+                  src="./images/startup/formal.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="social-icon">
+                  <ul>
+                    <li>
+                      <a href="#"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <h4>Rian Islam</h4>
+              <h5>Junior Web Developer</h5>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="team-profile text-center">
+              <div class="profile-img">
+                <img
+                  src="./images/startup/formal.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="social-icon">
+                  <ul>
+                    <li>
+                      <a href="#"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <h4>Rian Islam</h4>
+              <h5>Junior Web Developer</h5>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="team-profile text-center">
+              <div class="profile-img">
+                <img
+                  src="./images/startup/formal2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="social-icon">
+                  <ul>
+                    <li>
+                      <a href="#"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <h4>Rian Islam</h4>
+              <h5>Junior Web Developer</h5>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="team-profile text-center">
+              <div class="profile-img">
+                <img
+                  src="./images/startup/formal2.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="social-icon">
+                  <ul>
+                    <li>
+                      <a href="#"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fab fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <h4>Rian Islam</h4>
+              <h5>Junior Web Developer</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- team section end -->
+
+    <!-- contact section start -->
+
+    <section class="contact">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md-6 offset-3">
+            <h2 class="section-title">Get in Touch</h2>
+            <p class="section-desc">
+              Tour function information without cross action media value quickly
+              maximize timely deliverables.
+            </p>
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <div class="col-md-8 offset-2">
+            <form action="">
+              <div class="form-group d-flex justify-content-between first">
+                <input
+                  type="text"
+                  class="form-control"
+                  name=""
+                  placeholder="Your Name"
+                />
+                <input
+                  type="email"
+                  class="form-control"
+                  name=""
+                  placeholder="Your Email"
+                />
+              </div>
+
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  name=""
+                  placeholder="Subject"
+                />
+              </div>
+
+              <div class="form-group">
+                <textarea
+                  class="form-control"
+                  rows="8"
+                  placeholder="Message"
+                ></textarea>
+              </div>
+
+              <div class="form-group">
+                <input
+                  type="submit"
+                  class="btn btn-primary d-block"
+                  value="Send Message"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact section end -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
