--- a/startup.html
+++ b/startup.html
@@ -446,6 +446,33 @@
     </section>
     <!-- team section end -->
 
+    <!-- demo slider section start -->
+
+    <section class="slider">
+      <div class="container py-5">
+        <div class="text-white text-center py-5">
+          <div class="pt-5 pb-4">
+            <h4>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates corrupti assumenda dolore eaque non eveniet
+              necessitatibus, asperiores natus voluptate consequuntur sequi
+              maiores labore exercitationem ut! Praesentium culpa dolorem
+              ducimus delectus!
+            </h4>
+          </div>
+          <div class="slider-img py-3">
+            <img src="./images/startup/formal3.jpg" alt="" />
+          </div>
+          <div class="slider-title">
+            <h6>Robert Thomson</h6>
+            <small>Business</small>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- demo slider section end -->
+
     <!-- contact section start -->
 
     <section class="contact">
@@ -509,6 +536,59 @@
     </section>
 
     <!-- contact section end -->
+
+    <!-- footer section start -->
+
+    <footer class="footer-section bg-dark text-white pt-5">
+      <div class="container pb-5">
+        <div class="row mt-5 pb-5">
+          <div class="col-md-8">
+            <div class="d-flex align-items-center justify-content-center">
+              <div>
+                <img
+                  class="img-fluid"
+                  src="./images/startup/index.png"
+                  alt=""
+                />
+              </div>
+              <span class="px-4">About</span>
+              <span class="px-4">Services</span>
+              <span class="px-4">Portfolio</span>
+              <span class="px-4">Pages</span>
+              <span class="px-4">Blogs</span>
+              <span class="px-4">Contact</span>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="d-flex footer-icon">
+              <div class="px-3">
+                <i class="fab fa-facebook"></i>
+              </div>
+              <div class="px-3">
+                <i class="fab fa-twitter"></i>
+              </div>
+              <div class="px-3">
+                <i class="fab fa-instagram"></i>
+              </div>
+              <div class="px-3">
+                <i class="fab fa-linkedin"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-title pt-5">
+          <div class="border-top border-secondary mt-5">
+            <p class="d-flex align-items-center justify-content-center pt-5">
+              Copyright ©2022 All rights reserved | This template is made with
+              by ♥ <span class="color"> Colorlib</span>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- footer section end -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
