--- a/martine.html
+++ b/martine.html
@@ -15,11 +15,52 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
+    <title>🌊Martine</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- header start -->
+    <header>
+      <div class="topbar">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <span class="topbar-title">Top Destinations</span>
+              <div class="country-list d-inline-block">
+                <a href="#">Asia</a>
+                <a href="#">Europe</a>
+                <a href="#">America</a>
+              </div>
+            </div>
+            <div class="col-md-6 text-right">
+              <ul class="social-icon d-inline-block mb-0 pb-0">
+                <li>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+              </ul>
+              <span class="phone-icon"
+                ><i class="fas fa-phone"></i> +9944 4543543</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
+    <!-- header end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
