working on banner

--- a/martine.html
+++ b/martine.html
@@ -58,9 +58,80 @@
           </div>
         </div>
       </div>
+
+      <!-- main header start -->
+      <div class="main-header">
+        <div class="container">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid g-0">
+              <a class="navbar-brand" href="#"
+                ><img src="./images/martine/logo.png" alt=""
+              /></a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"
+                      >About</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Packages</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Pages</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Contact</a>
+                  </li>
+                </ul>
+                <div class="d-flex">
+                  <a href="">
+                    <button class="book-btn">Book Now</button>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </div>
+      <!-- main header end -->
     </header>
 
     <!-- header end -->
+
+    <!-- banner start -->
+    <div id="banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="banner-content">
+              <div>
+                <h1>SaintMartine</h1>
+                <h6>
+                  Let's start your journey with us, your dream will come true
+                </h6>
+                <a href="$">Discover Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- banner end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
